services/app/build/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    cc.service.app/instance: app
    cc.service.app/name: app
    cc.service.app/part-of: app
spec:
  replicas: 1
  selector:
    matchLabels:
      cc.service.app/instance: app
      cc.service.app/name: app
  template:
    metadata:
      labels:
        cc.service.app/instance: app
        cc.service.app/name: app
    spec:
      containers:
        - image: dcfranco/cc.service.app:0.0.0
          imagePullPolicy: IfNotPresent
          name: app
          ports:
            - name: app
              containerPort: 4000
          startupProbe:
            httpGet:
              path: /healthz
              port: app
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: app
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: app
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 10
          resources: {}
      restartPolicy: Always
